@@ -1,3 +1,7 @@
+* 2013-05-16 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26611: Sanitize masked/commented HTML tags
+
 * 2013-05-15 - marcus.klein@open-xchange.com
 
  - Fix for bug 26179: Removed configuration file for audit extension and placed it as example in the packages documentation.
